--- a/src/epub/text/loi.xhtml
+++ b/src/epub/text/loi.xhtml
@@ -8,14 +8,7 @@
 	<body epub:type="backmatter">
 		<nav id="loi" epub:type="loi">
 			<h2 epub:type="title">List of Illustrations</h2>
-			<ol>
-				<li>
-					<p>
-						<a href="chapter-1.xhtml#illustration-1">Note on paper scrap</a>
-					</p>
-				</li>
-				...
-			</ol>
+			<ol><li><p><a href="chapter-1.xhtml#illustration-1">Note on paper scrap</a></p></li> ...</ol>
 		</nav>
 	</body>
 </html>
