Capitalize A.M. and P.M. in chapter titles

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,97 +14,97 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: 8:37 <abbr>p.m.</abbr>—Spring 3100</a>
+					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: 8:37 <abbr>P.M.</abbr>—Spring 3100</a>
 				</li>
 				<li>
-					<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: 9:24 <abbr>p.m.</abbr>—Hallmarks of Murder</a>
+					<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: 9:24 <abbr>P.M.</abbr>—Hallmarks of Murder</a>
 				</li>
 				<li>
-					<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: 9:45 <abbr>p.m.</abbr>—Guards Are Stationed at the Doors</a>
+					<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: 9:45 <abbr>P.M.</abbr>—Guards Are Stationed at the Doors</a>
 				</li>
 				<li>
-					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: 10:02 <abbr>p.m.</abbr>—Pale Flares the Darkness</a>
+					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: 10:02 <abbr>P.M.</abbr>—Pale Flares the Darkness</a>
 				</li>
 				<li>
-					<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: 10:17 <abbr>p.m.</abbr>—Living or Dead?</a>
+					<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: 10:17 <abbr>P.M.</abbr>—Living or Dead?</a>
 				</li>
 				<li>
-					<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: 10:32 <abbr>p.m.</abbr>—Pictures in Dust</a>
+					<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: 10:32 <abbr>P.M.</abbr>—Pictures in Dust</a>
 				</li>
 				<li>
-					<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: 11:01 <abbr>p.m.</abbr>—Banked Fires</a>
+					<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: 11:01 <abbr>P.M.</abbr>—Banked Fires</a>
 				</li>
 				<li>
-					<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: 11:28 <abbr>p.m.</abbr>—<abbr epub:type="z3998:name-title">Mrs.</abbr> Endicott Screams</a>
+					<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: 11:28 <abbr>P.M.</abbr>—<abbr epub:type="z3998:name-title">Mrs.</abbr> Endicott Screams</a>
 				</li>
 				<li>
-					<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: 11:55 <abbr>p.m.</abbr>—Queer Deeps</a>
+					<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: 11:55 <abbr>P.M.</abbr>—Queer Deeps</a>
 				</li>
 				<li>
-					<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: 12:06 <abbr>a.m.</abbr>—The Stillness of a Grave</a>
+					<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: 12:06 <abbr>A.M.</abbr>—The Stillness of a Grave</a>
 				</li>
 				<li>
-					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: 12:15 <abbr>a.m.</abbr>—To Watch by Night</a>
+					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: 12:15 <abbr>A.M.</abbr>—To Watch by Night</a>
 				</li>
 				<li>
-					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: 12:30 <abbr>a.m.</abbr>—Madame Velasquez Stirs up Muck</a>
+					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: 12:30 <abbr>A.M.</abbr>—Madame Velasquez Stirs up Muck</a>
 				</li>
 				<li>
-					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: 2:01 <abbr>a.m.</abbr>—Glittering Eyes</a>
+					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: 2:01 <abbr>A.M.</abbr>—Glittering Eyes</a>
 				</li>
 				<li>
-					<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: 2:01 <abbr>a.m.</abbr>—An Empty Sheath</a>
+					<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: 2:01 <abbr>A.M.</abbr>—An Empty Sheath</a>
 				</li>
 				<li>
-					<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: 2:13 <abbr>a.m.</abbr>—The Thin Steel Blade</a>
+					<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: 2:13 <abbr>A.M.</abbr>—The Thin Steel Blade</a>
 				</li>
 				<li>
-					<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: 2:13 <abbr>a.m.</abbr>—Time <i>versus</i> Death</a>
+					<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: 2:13 <abbr>A.M.</abbr>—Time <i>versus</i> Death</a>
 				</li>
 				<li>
-					<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: 2:40 <abbr>a.m.</abbr>—The Angle of Death’s Path</a>
+					<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: 2:40 <abbr>A.M.</abbr>—The Angle of Death’s Path</a>
 				</li>
 				<li>
-					<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: 3:00 <abbr>a.m.</abbr>—Thin Haze of Dread</a>
+					<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: 3:00 <abbr>A.M.</abbr>—Thin Haze of Dread</a>
 				</li>
 				<li>
-					<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: 3:15 <abbr>a.m.</abbr>—The Properties of Horror</a>
+					<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: 3:15 <abbr>A.M.</abbr>—The Properties of Horror</a>
 				</li>
 				<li>
-					<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: 3:24 <abbr>a.m.</abbr>—On Private Heights</a>
+					<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: 3:24 <abbr>A.M.</abbr>—On Private Heights</a>
 				</li>
 				<li>
-					<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: 3:51 <abbr>a.m.</abbr>—A Woman’s Slipper</a>
+					<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: 3:51 <abbr>A.M.</abbr>—A Woman’s Slipper</a>
 				</li>
 				<li>
-					<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: 4:14 <abbr>a.m.</abbr>—Tap—Tap—Tap</a>
+					<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: 4:14 <abbr>A.M.</abbr>—Tap—Tap—Tap</a>
 				</li>
 				<li>
-					<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: 4:29 <abbr>a.m.</abbr>—A Turn of the Screw</a>
+					<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: 4:29 <abbr>A.M.</abbr>—A Turn of the Screw</a>
 				</li>
 				<li>
-					<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: 4:41 <abbr>a.m.</abbr>—As the Colours of Dawn</a>
+					<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: 4:41 <abbr>A.M.</abbr>—As the Colours of Dawn</a>
 				</li>
 				<li>
-					<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: 5:01 <abbr>a.m.</abbr>—Lunatic Vistas</a>
+					<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: 5:01 <abbr>A.M.</abbr>—Lunatic Vistas</a>
 				</li>
 				<li>
-					<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: 5:25 <abbr>a.m.</abbr>—There Was a Sailor</a>
+					<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: 5:25 <abbr>A.M.</abbr>—There Was a Sailor</a>
 				</li>
 				<li>
-					<a href="text/chapter-27.xhtml"><span epub:type="z3998:roman">XXVII</span>: 5:46 <abbr>a.m.</abbr>—<abbr epub:type="z3998:name-title">Mrs.</abbr> Endicott Cannot Be Found</a>
+					<a href="text/chapter-27.xhtml"><span epub:type="z3998:roman">XXVII</span>: 5:46 <abbr>A.M.</abbr>—<abbr epub:type="z3998:name-title">Mrs.</abbr> Endicott Cannot Be Found</a>
 				</li>
 				<li>
-					<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: 6:00 <abbr>a.m.</abbr>—Mist Drifting Through Mist</a>
+					<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: 6:00 <abbr>A.M.</abbr>—Mist Drifting Through Mist</a>
 				</li>
 				<li>
-					<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: 6:30 <abbr>a.m.</abbr>—As Is Mirage</a>
+					<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: 6:30 <abbr>A.M.</abbr>—As Is Mirage</a>
 				</li>
 				<li>
-					<a href="text/chapter-30.xhtml"><span epub:type="z3998:roman">XXX</span>: 7:11 <abbr>a.m.</abbr>—The Criminal and Weapon of the Crime</a>
+					<a href="text/chapter-30.xhtml"><span epub:type="z3998:roman">XXX</span>: 7:11 <abbr>A.M.</abbr>—The Criminal and Weapon of the Crime</a>
 				</li>
 				<li>
-					<a href="text/chapter-31.xhtml"><span epub:type="z3998:roman">XXXI</span>: 8:37 <abbr>p.m.</abbr>—Five Years Later</a>
+					<a href="text/chapter-31.xhtml"><span epub:type="z3998:roman">XXXI</span>: 8:37 <abbr>P.M.</abbr>—Five Years Later</a>
 				</li>
 				<li>
 					<a href="text/loi.xhtml">List of Illustrations</a>
