Fix casing in two titles

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -47,7 +47,7 @@
 					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: 12:15 <abbr>A.M.</abbr>—To Watch by Night</a>
 				</li>
 				<li>
-					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: 12:30 <abbr>A.M.</abbr>—Madame Velasquez Stirs up Muck</a>
+					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: 12:30 <abbr>A.M.</abbr>—Madame Velasquez Stirs Up Muck</a>
 				</li>
 				<li>
 					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: 2:01 <abbr>A.M.</abbr>—Glittering Eyes</a>
@@ -59,7 +59,7 @@
 					<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: 2:13 <abbr>A.M.</abbr>—The Thin Steel Blade</a>
 				</li>
 				<li>
-					<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: 2:13 <abbr>A.M.</abbr>—Time <i>versus</i> Death</a>
+					<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: 2:13 <abbr>A.M.</abbr>—Time <i>Versus</i> Death</a>
 				</li>
 				<li>
 					<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: 2:40 <abbr>A.M.</abbr>—The Angle of Death’s Path</a>
