--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -22,8 +22,8 @@
 			<b epub:type="z3998:personal-name">Brian Raiter</b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/75500">Project Gutenberg</a><br/>
-			and on digital scans from<br/>
-			<a href="PAGE_SCANS_URL">PAGE_SCANS_SOURCE</a>.</p>
+			and on digital scans from the<br/>
+			<a href="https://archive.org/details/bwb_S0-CTT-590">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
 			a painting completed in <time>YEAR</time> by<br/>
